# QBStrum

./: .gitignore  CMakeLists.txt  README.md
docs/: fretboard.html  index.html  install.html  parameters.html  plugininfo.html  settings.html  strumkeys.html  strumparameter.html
docs/ja-jp/: settings.html
presets/: QBStrum.keyswitch
resource/: License.txt  QBStrum.pitchlist  Standard 6Strings.qbs  plugeditor.uidesc  win32resource.aps
resource/Document/Manual/: content.css  fretboard.html  index.html  install.html  intro.html  layout.js  others.html  page-articulation.html  page-common.html  page-export.html  page-midiconvert.html  page-parts.html  page-plugin.html  parameters.html  plugininfo.html  settings.html  strumkeys.html  strumparameter.html  style.css
resource/Document/Manual/ja-jp/: fretboard.html  index.html  install.html  intro.html  parameters.html  plugininfo.html  settings.html  strumkeys.html  strumparameter.html
resource/documents/: index.html
source/: CFretBoard.cpp  CFretBoard.h  CNoteEdit.h  CNoteLabel.h  EnumWrapper.h  EventScheduler.h  ExpParameter.cpp  ExpParameter.h  IScheduledEventListener.h  NoteEvent.h  ScheduledNote.h  TimeQueue.h  cchordlabel.h  cchordlistener.h  cchordnumber.h  cchordselecter.h  cchordselecterfactory.cpp  cdraggablelabel.h  cfretboard.h  cfretboardviewfactory.cpp  chordmap.h  chordmapfixed.h  clicenseviewfactory.cpp  cmenubutton.h  cnoteeditfactory.cpp  cnotelabelfactory.cpp  cnotemsg.h  cstrumviewfactory.cpp  debug_log.h  files.h  midiwriter.h  myparameters.h  myvst3editor.h  parameterframework.h  parameterhelper.h  plugcids.h  plugcontroller.cpp  plugcontroller.h  plugdefine.h  plugentry.cpp  (+6 more)
